WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314988
[EvaluationTimeZoom] Text with cap unit font-size not zoomed properly
https://bugs.webkit.org/show_bug.cgi?id=314988
Summary
[EvaluationTimeZoom] Text with cap unit font-size not zoomed properly
Vitor Roriz
Reported
2026-05-17 14:02:31 PDT
Reported by Sammy G. " <p> <span style="font-size: 1.5cap">Hello</span> Some Text <p> The above content does not get zoomed properly when you increase the page scale factor or add CSS zoom "
Attachments
Add attachment
proposed patch, testcase, etc.
Vitor Roriz
Comment 1
2026-05-17 14:07:09 PDT
<
rdar://problem/173952869
>
Vitor Roriz
Comment 2
2026-05-17 14:07:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65076
EWS
Comment 3
2026-05-18 11:49:55 PDT
Committed
313432@main
(55bfadcbdeed): <
https://commits.webkit.org/313432@main
> Reviewed commits have been landed. Closing PR #65076 and removing active labels.
Sammy Gill
Comment 4
2026-05-21 10:35:58 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60076
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug