[EvaluationTimeZoom] Text with cap unit font-size not zoomed properly https://bugs.webkit.org/show_bug.cgi?id=314988 rdar://173952869

Reviewed by Brent Fulgham.

Compute effectiveRangeZoomOption once at the top of
computeUnzoomedNonCalcLengthDouble (forces Unzoomed when
propertyToCompute == CSSPropertyFontSize) and use it in all
font-relative branches. This pattern was already applied to Em/Rem but
missing from Cap/Rcap, Ex/Rex (xHeight path), Ch/Rch, and Ic/Ric.

* LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/font-relative-units-with-zoom-expected.txt: Renamed from ic-unit-expected.txt.
* LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/font-relative-units-with-zoom.html: Renamed from ic-unit.html.
* Source/WebCore/style/values/primitives/StyleLengthResolution.cpp:
(WebCore::Style::computeUnzoomedNonCalcLengthDouble):

Canonical link: https://commits.webkit.org/313432@main